frontend/test/should_pass/computations_def_decl.grg
function one() : int
{
	def var res:int;
	res = 1;
	return(res);
}

test t : (int)
{	
	independent {
	---
		yield {
			def var resres:int;
			resres = one() + 2;
			yield res = resres;
		}
	}
---
	def var res:int;
	
	return (res);
}

rule r : (int)
{	
	modify {
	---
		def var res:int;
		
		eval { 
			def var resres:int;
			resres = one() + 2;
			yield res = resres;
		}
		
		return (res);
	}
}
